--- a/src/pages/chatPage/components/parts/LimitsPart/components/LimitItem/LimitItem.module.scss
+++ b/src/pages/chatPage/components/parts/LimitsPart/components/LimitItem/LimitItem.module.scss
@@ -1,8 +1,37 @@
 .wrapper {
-  border-radius: 8px;
-  height: 150px;
   background-color: var(--blue_3);
-  height: 100px;
+  border-radius: 8px;
   margin-bottom: 5px;
+  padding: 7px;
+  overflow: hidden;
   cursor: pointer;
+  border: 1px solid transparent;
+  transition: all .2s ease;
+
+  &:hover {
+    border-color: var(--violet_2);
+  }
+
+  .part {
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    
+    .avatar {
+
+    }
+    .body {
+      width: 100%;
+      overflow: hidden;
+      padding: 0 5px;
+    }
+  }
+
+  .part.last {
+    justify-content: flex-end;
+    .body {
+      text-align: right;
+    }
+  }
+  
 }
