--- a/src/components/Avatar/Avatar.module.scss
+++ b/src/components/Avatar/Avatar.module.scss
@@ -20,16 +20,17 @@
     height: 100%;
     overflow: hidden;
     border-radius: 8px;
-    background-color: var(--gray_1);
+    background-color: var(--blue_1);
     flex: 0 0 auto;
     position: relative;
-
+    // border: 2px solid transparent;
+    transition: all .2s ease;
 
     img {
       width: 100%;
       height: 100%;
-      object-fit: cover;
       display: flex;
+      object-fit: cover;
     }
 
     .skeleton {
@@ -80,5 +81,18 @@
 .wrapper.online {
   &:after {
     transform: scale(1);
+  }
+}
+
+.wrapper.round.online {
+  &:after {
+    bottom: 8%;
+    right: 8%;
+  }
+}
+
+.wrapper.active {
+  .img {
+    border:2px solid var(--violet_1);
   }
 }
