--- a/src/components/Avatar/Avatar.module.scss
+++ b/src/components/Avatar/Avatar.module.scss
@@ -1,3 +1,4 @@
+
 .wrapper {
   position: relative;
   flex: 0 0 auto;
@@ -13,6 +14,7 @@
     transform: scale(0);
     transition: all .2s ease;
     background-color: var(--green_1);
+    border: 2px solid #fff;
   }
 
   .img {
@@ -20,7 +22,7 @@
     height: 100%;
     overflow: hidden;
     border-radius: 8px;
-    background-color: var(--blue_1);
+    background-color: var(--blue_4);
     flex: 0 0 auto;
     position: relative;
     // border: 2px solid transparent;
@@ -80,19 +82,33 @@
 
 .wrapper.online {
   &:after {
-    transform: scale(1);
+    transform: scale(1.5);
   }
 }
 
-.wrapper.round.online {
+.wrapper.round.online, .wrapper.round.error {
   &:after {
-    bottom: 8%;
-    right: 8%;
+    bottom: 6%;
+    right: 6%;
   }
 }
+
+.wrapper.error {
+  .img {
+    // border:2px solid var(--red_1);
+  }
+  &:after {
+    background-color: red;
+    transform: scale(1.5);
+  }
+}
+
+
 
 .wrapper.active {
   .img {
     border:2px solid var(--violet_1);
+    // border: 2px solid lime;
+    box-shadow: 0 0 10px 4px rgba(#7D6AF0, .5);
   }
 }
