--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,3 +2,5 @@
 @import './global/global.scss';
 
 @import './modules/notify.scss';
+@import './modules/modal.scss';
+@import './modules/table.scss';
