--- a/src/styles/global/global.scss
+++ b/src/styles/global/global.scss
@@ -30,7 +30,7 @@ body {
     height: 100%;
     font-family: 'Inter', sans-serif;
     font-size: 16px;
-    line-height: 140%;
+    // line-height: 140%;
     color: #fff;
     overflow-x: hidden;
     overflow-y: hidden;
