--- a/src/components/Avatar/Avatar.module.scss
+++ b/src/components/Avatar/Avatar.module.scss
@@ -14,7 +14,7 @@
     transform: scale(0);
     transition: all .2s ease;
     background-color: var(--green_1);
-    border: 2px solid #fff;
+    //border: 2px solid #fff;
   }
 
   .img {
