--- a/src/pages/chatPage/components/parts/DialogPart/components/Chat/components/Message/Message.module.scss
+++ b/src/pages/chatPage/components/parts/DialogPart/components/Chat/components/Message/Message.module.scss
@@ -34,6 +34,37 @@
           align-items: flex-end;
           justify-content: space-between;
 
+          .gifts {
+            display: flex;
+            flex-wrap: wrap;
+            margin-left: -2px;
+            margin-right: -2px;
+
+            .gift {
+              width: 100px;
+              height: 100px;
+              margin: 4px 2px;
+              border-radius: 8px;
+              overflow: hidden;
+
+              img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                display: flex;
+              }
+            }
+          }
+
+          .wink {
+            font-size: 50px;
+            line-height: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: var(--violet_1);
+          }
+
           .time {
             margin-left: 5px;
             color: var(--gray_1);
