--- a/src/pages/chatPage/components/parts/DialogPart/components/Chat/components/Message/Message.module.scss
+++ b/src/pages/chatPage/components/parts/DialogPart/components/Chat/components/Message/Message.module.scss
@@ -80,6 +80,7 @@
 .wrapper.self {
   justify-content: flex-end;
   .in {
+    justify-content: flex-end;
     .avatar {
       margin-left: 10px;
     }
