--- a/src/pages/chatPage/components/parts/DialogPart/components/ChatAction/components/Media/components/Item/Item.module.scss
+++ b/src/pages/chatPage/components/parts/DialogPart/components/ChatAction/components/Media/components/Item/Item.module.scss
@@ -53,11 +53,12 @@
   .img {
     width: 100%;
     height: 100%;
+    background-color: #fff;
 
     img {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain;
       display: flex;
     }
   }
