--- a/src/pages/chatPage/components/parts/DialogPart/components/ChatAction/components/Stickers/Stickers.module.scss
+++ b/src/pages/chatPage/components/parts/DialogPart/components/ChatAction/components/Stickers/Stickers.module.scss
@@ -19,8 +19,10 @@
       transform: scale(0.9);
     }
     .prev {
-      // width: 50px;
-      // height: 50px;
+      height: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
 
       img {
         width: 100%;
