--- a/src/pages/statPage/components/StateTable/StatTable.module.scss
+++ b/src/pages/statPage/components/StateTable/StatTable.module.scss
@@ -1,10 +1,28 @@
 .wrapper {
   padding: 12px 0;
-  
+  height: calc(100vh - 24px - 90px);
   .top {
 
   }
   .body {
-    
+    position: relative;
+
+    .loader {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      align-items: flex-start;
+      display: flex;
+      justify-content: center;
+      backdrop-filter: blur(10px);
+    }
+  }
+
+  .pag {
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
