--- a/src/pages/chatPage/components/parts/DialogPart/components/DialogUsers/components/DialogUser/DialogUser.module.scss
+++ b/src/pages/chatPage/components/parts/DialogPart/components/DialogUsers/components/DialogUser/DialogUser.module.scss
@@ -17,7 +17,9 @@
       border-radius: 10px;
       border: 1px solid var(--gray_1);
       background-color: var(--blue_3);
-      padding: 10px;
+      padding: 5px;
+      font-size: 12px;
+      line-height: 17px;
     }
   }
 }
