--- a/src/pages/chatPage/components/parts/DialogPart/components/Chat/components/Message/Message.module.scss
+++ b/src/pages/chatPage/components/parts/DialogPart/components/Chat/components/Message/Message.module.scss
@@ -20,6 +20,8 @@
       width: 80%;
       display: flex;
       align-items: flex-end;
+      font-size: 13px;
+      line-height: 17px;
 
       .bubble {
         padding: 10px;
