--- a/src/pages/chatPage/components/parts/LimitsPart/components/LimitItem/LimitItem.module.scss
+++ b/src/pages/chatPage/components/parts/LimitsPart/components/LimitItem/LimitItem.module.scss
@@ -1,9 +1,9 @@
 .wrapper {
-  background-color: var(--blue_3);
+  background-color: var(--blue_4);
   border-radius: 8px;
   margin-bottom: 5px;
   padding: 7px;
-  overflow: hidden;
+  // overflow: hidden;
   cursor: pointer;
   border: 1px solid transparent;
   transition: all .2s ease;
@@ -15,11 +15,12 @@
   .part {
     display: flex;
     align-items: center;
-    overflow: hidden;
+    // overflow: hidden;
     
     .avatar {
 
     }
+
     .body {
       width: 100%;
       overflow: hidden;
@@ -29,8 +30,18 @@
         font-weight: 600;
         color: var(--violet_1);
       }
+
+      .timer {
+        font-weight: 600;
+        color: var(--green_1);
+      }
+      .timer.warn {
+        color: var(--red_1);
+      }
     }
+    
   }
+  
 
   .part.last {
     justify-content: flex-end;
@@ -39,4 +50,10 @@
     }
   }
   
+}
+
+.wrapper.disabled {
+  opacity: .6;
+  pointer-events: none;
+  touch-action: none;
 }
