--- a/src/components/Avatar/Avatar.module.scss
+++ b/src/components/Avatar/Avatar.module.scss
@@ -52,9 +52,9 @@
         height: 100%;
         width: 100%;
         content: '';
-        background-color: #fff;
+        // background-color: #fff;
         // animation: sk-pr-loading 1s linear infinite;
-        opacity: .5;
+        // opacity: .5;
       }
 
       @keyframes sk-pr-loading {
