--- a/src/pages/chatPage/components/parts/LimitsPart/components/LimitItem/LimitItem.module.scss
+++ b/src/pages/chatPage/components/parts/LimitsPart/components/LimitItem/LimitItem.module.scss
@@ -53,7 +53,7 @@
 }
 
 .wrapper.disabled {
-  opacity: .6;
-  pointer-events: none;
-  touch-action: none;
+  // opacity: .6;
+  // pointer-events: none;
+  // touch-action: none;
 }
