--- a/src/pages/chatPage/components/parts/DialogPart/components/Chat/components/Message/Message.module.scss
+++ b/src/pages/chatPage/components/parts/DialogPart/components/Chat/components/Message/Message.module.scss
@@ -52,7 +52,7 @@
               img {
                 width: 100%;
                 height: 100%;
-                object-fit: cover;
+                object-fit: contain;
                 display: flex;
               }
             }
@@ -72,6 +72,22 @@
             color: var(--gray_1);
             font-size: 10px;
             line-height: 12px;
+          }
+
+          .media {
+            .img {
+              width: 100px;
+              height: 100px;
+              border-radius: 10px;
+              border: 1px solid var(--violet_1);
+              
+              img {
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+                display: flex;
+              }
+            }
           }
         }
       }
